# sonic_pad_os

./: .gitignore  README.md  rules.mk
config/: Config-build.in  Config-images.in  Config-kernel.in
docs/: Git.md  Makefile  Tina Linux quick start guide.md  build.md  repo_guide.md
lichee/arisc/: Makefile
lichee/arisc/ar100s/: .gitignore  Kconfig  Makefile
lichee/arisc/coco/: Kconfig  Makefile  build.sh
lichee/brandy-2.0/: build.sh
lichee/brandy-2.0/spl/: .gitignore  Makefile
lichee/brandy-2.0/tools/: .gitignore
lichee/brandy-2.0/u-boot-2018/: .gitignore  Makefile  config.mk
lichee/linux-4.9/: .gitignore
lichee/linux-4.9/drivers/: Kconfig  Makefile
lichee/linux-4.9/fs/: eventpoll.c
lichee/linux-4.9/init/: main.c
lichee/linux-4.9/lib/: Kconfig  Makefile
lichee/linux-4.9/mm/: slub.c
lichee/linux-4.9/scripts/: build.sh  checkpatch.pl
package/: .gitignore
package/allwinner/4Gmanager/: Makefile  readme
package/allwinner/alsa-conf-aw/: Makefile
package/allwinner/alsa-plugins-aw/: Makefile
package/allwinner/boot-play/: Makefile  play.init
package/allwinner/boot-play/src/: CMakeLists.txt  boot-play.c  bootanimation.c  de_display.c  de_display.h  g2d_driver_enh.h  ion_head.h  jpeg_wrapper.c  jpeg_wrapper.h  sunxi_g2d.c  sunxi_g2d.h
package/allwinner/btmanager/: Makefile
package/allwinner/camerademo/: Makefile
package/allwinner/eyesee-minigui/: Makefile
package/allwinner/healthd/: Makefile
package/allwinner/leakage_current/: Makefile
package/allwinner/libAWIspApi/: Makefile
package/allwinner/libdisplay/: README.md
package/allwinner/libkey/: Makefile
package/allwinner/libuapi/: Makefile
package/allwinner/mad-demo/: Makefile
package/allwinner/misc-upgrade/: aw_upgrade_image.sh
package/allwinner/msgbox_demo/: Makefile
package/allwinner/mtop/: Makefile
package/allwinner/rpaf/: Makefile
package/allwinner/rt_media/: Makefile
package/allwinner/smart_car/: Makefile  readme.txt
package/allwinner/softap/: Makefile
package/allwinner/swupdate/: Config-defaults.in  Makefile  swupdate_autorun.init  swupdate_cmd.sh  swupdate_cmd_ab.sh
package/allwinner/tconfigs/: Makefile
package/allwinner/tina_multimedia/: Config.in  Makefile
package/allwinner/tinymp3/: Makefile
package/allwinner/wifimanager/: Makefile
package/allwinner/x264demo/: Makefile
package/base-files/: setusbconfig-configfs
package/busybox-init-base-files/busybox-init-base-files_ramfs/: init_sunxi
package/busybox-init-base-files/files/: pseudo_init
package/creality/: version.mk
package/creality/ai-engine/: Makefile
package/creality/avr-gcc/: Makefile
package/creality/brightness/: Makefile
package/creality/cameraInfo/: Makefile
package/creality/delayed_imaging/: Makefile
package/creality/fluidd/: Makefile
package/creality/fluidd-pad/: Makefile
package/creality/gcc-arm-none-eabi/: Makefile
package/creality/klipper/: Makefile
package/creality/klipper-brain/: Makefile
package/creality/lcd_display/: Makefile
package/creality/libCrLog/: Makefile
package/creality/mainsail/: Makefile
package/creality/monitor/: Makefile
package/creality/moonraker/: Makefile
package/creality/ncnn-yolov5/: Makefile
package/creality/restore/: Makefile
package/creality/rtsp_demo/: Makefile
package/creality/usb_rest/: Makefile
package/devel/make/: Makefile
package/devel/strace/: Makefile
package/devel/valgrind/: Makefile
package/firmware/linux-firmware/: Makefile
package/kernel/exfat/: Makefile
package/kernel/gpu-km/: Makefile
package/kernel/gpu-km-opencl/: Makefile
package/lang/: python-package-install.sh
package/lang/Jinja2/: Makefile
package/lang/python-backports.functools_lru_cache/: Makefile
package/lang/python-can/: Makefile
package/lang/python-cffi/: Makefile
package/lang/python-cycler/: Makefile
package/lang/python-cython/: Makefile
package/lang/python-dateutil/: Makefile
package/lang/python-greenlet/: Makefile
package/lang/python-kiwisolver/: Makefile
package/lang/python-matplotlib/: Makefile
package/lang/python-numpy/: Makefile
package/lang/python-pip/: Makefile
package/lang/python-psutil/: Makefile
package/lang/python-setuptools/: Makefile
package/lang/python-subprocess32/: Makefile
package/lang/python3-attrs/: Makefile
package/lang/python3-cython/: Makefile
package/lang/python3-gevent/: Makefile
package/lang/python3-idna/: Makefile
package/qt/qt-keyboard/src/: CMakeLists.txt  README.md  VirtualKeyboard.pro
package/qt/qt-keyboard/src/TestKeyboard/: TestKeyboard.pro  Widget.cpp  Widget.ui  main.cpp
package/qt/qt-keyboard/src/pinyin/: CMakeLists.txt  pinyin.pro
package/qt/qt-keyboard/src/pinyin/command/: pinyinime_dictbuilder.cpp
package/qt/qt-keyboard/src/pinyin/share/: userdict.cpp
package/qt/qt-keyboard/src/qt5softkeyboard/: CMakeLists.txt  CandidatesListWidget.cpp  CandidatesListWidget.h  KeyboardContainer.cpp  KeyboardContainer.h  NormalKeyboard.cpp  NormalKeyboard.h  NormalKeyboard.ui  NumKeyboard.cpp  NumKeyboard.h  NumKeyboard.ui  QAbstractInputMethod.cpp  QAbstractInputMethod.h  QKeyboardLayout.cpp  QKeyboardLayout.h  QPinyinInputMethod.cpp  QPinyinInputMethod.h  Qt5Input.json  SymbolKeyboard.cpp  SymbolKeyboard.h  SymbolKeyboard.ui  inputcontext.cpp  inputcontext.h  pinyindecoderservice.cpp  pinyindecoderservice_p.h  platforminputcontextplugin.cpp  platforminputcontextplugin.h  qt5softkeyboard.pro  res.qrc
package/qt/qt-keyboard/src/qt5softkeyboard/dict/: pinyinEx.ini
package/qt/qt-keyboard/src/qt5softkeyboard/layout/: main.json  symbols.json
package/qt/qt-minimal/src/: CMakeLists.txt  main.cpp  minimal.pro  watchdog.cpp  watchdog.h  webview.cpp  webview.h
package/qt/qt-textures/src/: CMakeLists.txt
package/qt/qt-washing-machine/src/: CMakeLists.txt
package/testunit/: Config.in  Makefile
scripts/: .gitignore  check_static-v2.0.sh  create-new-pro.sh  createkeys  make_patch.py  pack_img.sh  prepare.sh  share_tag.sh  update_optee_pubkey.py
scripts/.hooks/: post-dragon
scripts/mempatch/: get-version.sh  mkpatch-dram.sh  mkpatch-mmc.sh  mkpatch-nand.sh
(+2702 files in other folders)
